# E3Spice

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  configure.sh  install.sh  license  run.sh
E3Spice/: CMakeLists.txt
E3Spice/src/: main.cpp
E3SpiceLib/: CMakeLists.txt
E3SpiceLib/include/UI/: E3SpiceUI.h  MainScreen.h
E3SpiceLib/src/UI/: E3SpiceUI.cpp  MainScreen.cpp
E3WidgetsLib/: CMakeLists.txt
E3WidgetsLib/include/: E3Constants.h  E3Tk.h  E3Types.h
E3WidgetsLib/include/Font/: FontManager.h
E3WidgetsLib/include/Screen/: Screen.h
E3WidgetsLib/include/Utils/: E3WidgetUtils.h
E3WidgetsLib/include/Widget/: IPlacable.h  IWidget.h  Label.h  PlacableWidget.h  Screen.h  Widget.h  WidgetIdGenerator.h
E3WidgetsLib/include/Widget/EventHandlers/: IMouseHoverEventHandler.h
E3WidgetsLib/src/: E3Tk.cpp  Screen.cpp
E3WidgetsLib/src/Font/: FontManager.cpp
E3WidgetsLib/src/Screen/: Screen.cpp
E3WidgetsLib/src/Utils/: E3WidgetUtils.cpp
E3WidgetsLib/src/Widget/: Label.cpp  PlacableWidget.cpp  Screen.cpp  Widget.cpp  WidgetIdGenerator.cpp
